added contact at the end

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
 
         <section>
           <h1>THE END</h1>
+          <p>
+            <a href="mailto:bonjour@nukomeet.com">Contact</a>
         </section>
 
       </div>
