fix: missing images on S3
[1:00]

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         <section>
           <img src='http://f.cl.ly/items/1h0Y1Q1d3n2l3E2K0Z3M/nukomeet_av.png' alt='Nukomeet'/>
+          <h6>We help companies transform ideas into great software products</h6>
           <p>
             <small class='grey'>Press Arrow-Right</small>
           </p>
@@ -50,7 +51,7 @@
             <a href='http://nukomeet.com'>nukomeet.com</a>
             <a href='http://twitter.com/nukomeet'>@nukomeet</a>
           </p>
-          <small>Paris - POZnan - World </small>
+          <small>From Paris to Earth</small>
         </section>
 
         <section>
@@ -79,8 +80,8 @@
           <img src='http://f.cl.ly/items/0M0d1y2H3t430n2E1v27/societe-generale.jpg' alt='Societe Generale' width='150'/>
           <img src='http://f.cl.ly/items/140H2K2G2B2C1S1N1S0x/afd.jpg' alt='AFD' width='150'/>
           <img src='http://f.cl.ly/items/2J2H332j3D1W1u1x0y16/ubs-logo.jpg' alt='UBS Bank' width='150'/>
-          <img src='https://dl.dropbox.com/u/7622715/logo/walutobox.png' alt='WalutoBox' width='150'/>
-          <img src='https://dl.dropbox.com/u/7622715/logo/gdf_suez.jpg' alt='GDF Suez' width='150'/>
+          <img src='http://nukomeet-com.s3.amazonaws.com/logo/walutobox.png' alt='WalutoBox' width='150'/>
+          <img src='http://nukomeet-com.s3.amazonaws.com/logo/gdf_suez.jpg' alt='GDF Suez' width='150'/>
         </section>
 
         <section>
@@ -91,30 +92,30 @@
           </section>
           <section>
             <h3>Anti-Java, but adoring <strong>JVM</strong></h3>
-            <img src='https://dl.dropbox.com/u/7622715/logo/no-java.png' alt='No Java' width='150'/>
+            <img src='http://nukomeet-com.s3.amazonaws.com/logo/no-java.png' alt='No Java' width='150'/>
           </section>
           <section>
             <h3>Strong expertise in <strong>Ruby/Rails</strong></h3>
-            <img src='https://dl.dropbox.com/u/7622715/logo/ruby.png' alt='Ruby' width='150'/>
-            <img src='https://dl.dropbox.com/u/7622715/logo/rails.png' alt='Rails' width='150'/>
+            <img src='http://nukomeet-com.s3.amazonaws.com/logo/ruby.png' alt='Ruby' width='150'/>
+            <img src='http://nukomeet-com.s3.amazonaws.com/logo/rails.png' alt='Rails' width='150'/>
 
           </section>
           <section>
             <h3>Proficient with <strong>JavaScript (CoffeeScript)</strong></h3>
             <p>Responsive frontends with <strong>Backbone.js</strong></p>
-            <img src='https://dl.dropbox.com/u/7622715/logo/coffeescript_logo.png' alt='CoffeeScript' width='150'/>
-            <img src='https://dl.dropbox.com/u/7622715/logo/backbone.png' alt='Backbone' width='150'/>
+            <img src='http://nukomeet-com.s3.amazonaws.com/logo/coffeescript_logo.png' alt='CoffeeScript' width='150'/>
+            <img src='http://nukomeet-com.s3.amazonaws.com/logo/backbone.png' alt='Backbone' width='150'/>
 
           </section>
           <section>
             <h3>Playing with <strong>Node.js</strong></h3>
             <p>HTML5 based, <strong>real-time</strong> apps</p>
-            <img src='https://dl.dropbox.com/u/7622715/logo/nodejs_logo.png' alt='NodeJS' width='150'/>
+            <img src='http://nukomeet-com.s3.amazonaws.com/logo/nodejs_logo.png' alt='NodeJS' width='150'/>
           </section>
           <section>
             <h3>Mastering <strong>Clojure</strong></h3>
             <p>Concurrency and Big Data</p>
-            <img src='https://dl.dropbox.com/u/7622715/logo/clojure-logo.png' alt='Clojure' width='150'/>
+            <img src='http://nukomeet-com.s3.amazonaws.com/logo/clojure-logo.png' alt='Clojure' width='150'/>
           </section>
           <section>
             <h3>Having fun with <strong>Mobile</strong></h3>
@@ -145,14 +146,6 @@
             <a href='http://slicecook.com'>slicecook.com</a>
           </section>
         </section>
-
-        <section>
-          <h2>Borasco</h2>
-          <p>
-            JavaScript framework for Test Automation
-          </p>
-        </section>
-
 
         <section>
           <h1>THE END</h1>
