--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <section>
           <img src='http://f.cl.ly/items/1h0Y1Q1d3n2l3E2K0Z3M/nukomeet_av.png' alt='Nukomeet'/>
-          <h6>We help companies transform ideas into great software products</h6>
+          <h6>We help you transform ideas into great products</h6>
           <p>
             <small class='grey'>Press Arrow-Right</small>
           </p>
@@ -51,7 +51,7 @@
             <a href='http://nukomeet.com'>nukomeet.com</a>
             <a href='http://twitter.com/nukomeet'>@nukomeet</a>
           </p>
-          <small>From Paris to Earth</small>
+          <small>Paris / World</small>
         </section>
 
         <section>
